# Signal_Count

./: .gitignore  README.md  foundry.toml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  main.py
docs/: ARCHITECTURE.md  agent-development-workflow.md  demo-runbook.md  final-submission.md  gensyn-contracts.md  spec.md
mcp_routing/: __init__.py  mcp_router.py
scripts/: check_axl.sh  check_axl_mesh.sh  export_submission_pack.sh  prepare_axl_mesh_demo.sh  ree_docker.sh  replay_full_battle_artifact.sh  run_app_live.sh  run_app_mesh_live.sh  run_axl_mesh_node_a.sh  run_axl_mesh_node_b.sh  run_axl_mesh_router.sh  run_axl_mesh_specialist.sh  run_full_battle_demo.sh  run_node_narrative.sh  run_node_regime.sh  run_node_risk.sh  run_offline_demo.sh  run_offline_partial_demo.sh  stop_full_battle_demo.sh  verify_latest_artifact.sh  verify_ree_e2e.py
tests/: conftest.py  test_axl_client.py  test_chain_analyst.py  test_chain_client.py  test_chain_receipts.py  test_ci_config.py  test_contracts.py  test_coordinator_service.py  test_demo_llm_client.py  test_demo_ui.py  test_health.py  test_identity_canonical.py  test_identity_signing.py  test_indexer.py  test_jobs_api.py  test_llm_client.py  test_memo_synthesis.py  test_narrative_service.py  test_node_server.py  test_offline_transport.py  test_orchestration_graph.py  test_partial_failures.py  test_payouts.py  test_provenance.py  test_ree_receipts.py  test_ree_runner.py  test_regime_service.py  test_rendering.py  test_reputation.py  test_risk_service.py  test_runtime_wiring.py  test_smoke.py  (+2 more)
(+97 files in other folders)
